# vrp-experiments

./: .gitignore  Cargo.toml  Qwen3-4B-reVRP.ipynb  Qwen3-8B-4bit-reVRP.ipynb  README.md  build.sh
common/: Cargo.toml
common/src/: lib.rs
common/src/aws/: mod.rs  s3_ops.rs
common/src/models/: errors.rs  mod.rs  states.rs
common/src/runtime/: environment.rs  mod.rs  variables.rs
common/tests/unit/models/: error_test.rs
lambdas/: Cargo.toml
lambdas/src/common/: batch_ops.rs  environment.rs  mod.rs  models.rs  proxy_events.rs  s3_ops.rs
lambdas/src/gateway/poll/: main.rs
lambdas/src/gateway/submit/: main.rs
lambdas/src/triggers/batch/: main.rs
lambdas/tests/unit/common/: proxy_events_test.rs
rest-apis/: Cargo.toml
rest-apis/src/common/: api_events.rs  batch_ops.rs  environment.rs  mod.rs  models.rs  proxy_events.rs  s3_ops.rs
rest-apis/src/submit/: main.rs
scripts/: build.sh  test_poll_solution.sh  test_submit_problem.sh
server/: Cargo.toml
server-k8s-api/: .gitignore  README.md
server-k8s-api/helm/: Chart.yaml  values.yaml
server-k8s-api/helm/templates/: deployment.yaml  service.yaml
server-k8s-api/scripts/: publish_image.sh
server-k8s-api/server/: Cargo.toml  Dockerfile
server-k8s-api/server/src/: main.rs  problem.rs  routes.rs
server-k8s-api/src/: routes.rs
server/src/: main.rs
serverless-api/: .gitignore  README.md
serverless-api/common/src/aws/: mod.rs
serverless-api/lambdas/src/common/: batch_ops.rs  proxy_events.rs
serverless-api/solver/image/: Dockerfile
serverless-api/terraform/: batch.tf
serverless-aws/: Cargo.toml
serverless-aws/common/src/runtime/: environment.rs  mod.rs
serverless-aws/scripts/: deploy.sh
serverless-aws/solver/: Cargo.toml
serverless-aws/terraform/: lambda.tf  variables.tf
solver/: Cargo.toml
solver/image/: Dockerfile
solver/src/: main.rs
src/: main.rs
terraform/: api.tf  apis.tf  batch.tf  iam.tf  lambda.tf  lambda_submit.tf  lambdas.tf  main.tf  storage.tf  variables.tf
training/: Qwen3_(4B)-GRPO.ipynb
(+4 files in other folders)
