[package]
name = "common"
version = "0.1.0"
authors = ["reinterpretcat <ilya.builuk@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.21"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.55"

rusoto_core = { version = "0.44.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.44.0", default_features = false, features=["rustls"] }

futures = "0.3.5"
bytes = "0.5.4"