[package]
name = "lambda-submit"
version = "0.1.0"
authors = ["reinterpretcat <ilya.builuk@gmail.com>"]
edition = "2018"

[dependencies]
common =  { path = "../common" }
vrp-pragmatic = "1.4.2"

lambda_runtime = "0.2.1"
aws_lambda_events="0.3.0"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.55"

rusoto_batch = { version = "0.44.0", default_features = false, features=["rustls"] }

uuid = { version = "0.8", features = ["v4"] }
futures = "0.3.5"

[lib]
name = "lambdas"
path = "src/lib.rs"

[[bin]]
name = "submit_problem"
path = "src/gateway/submit/main.rs"

[[bin]]
name = "poll_solution"
path = "src/gateway/poll/main.rs"

[[bin]]
name = "trigger_solver"
path = "src/triggers/batch/main.rs"
