[package]
name = "lambda-submit"
version = "0.1.0"
authors = ["reinterpretcat <ilya.builuk@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
aws_lambda_events="0.3.0"
tokio = "0.2.21"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.55"

rusoto_core = { version = "0.44.0", default_features = false, features=["rustls"] }
rusoto_s3={ version = "0.44.0", default_features = false, features=["rustls"] }
#openssl = { version = "0.10.29", features = ["vendored"] }

vrp-pragmatic = "1.2.2"

uuid = { version = "0.8", features = ["v4"] }


[lib]
name = "rest_apis"
path = "src/lib.rs"


[[bin]]
name = "submit_problem"
path = "src/submit/main.rs"


[[bin]]
name = "poll_solution"
path = "src/poll/main.rs"
